tests/baselines/reference/typeParameterAssignmentWithConstraints.errors.txt
==== tests/cases/compiler/typeParameterAssignmentWithConstraints.ts (2 errors) ====
    function f<A, B extends A>() {
                  ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        var a: A;
        var b: B;
        a = b; // Error: Can't convert B to A
        ~
!!! error TS2323: Type 'B' is not assignable to type 'A'.
    }